//
// Copyright 2019 Wireline, Inc.
//

syntax = "proto3";

package wirelineio.credential;

//
// Genesis block written on the creation of an item.
// Establishes authority of item.
//
message ItemGenesis {

  // Item Type.
  required string type = 1;

  // Item Key.
  required string key = 2;

  // Public Key of item owner.
  required string ownerKey = 3;

  // Signature.
  required string signature = 4;

  // TODO(ashwin): Add optional ANY for app-specific extensions.
}

//
// Genesis block written on the creation of a party (to the first feed).
// Establishes authority of party.
//
message PartyGenesis {

  // Block Type.
  required string type = 1;

  // Party Key.
  required string key = 2;

  // Public Key of party owner.
  required string ownerKey = 3;

  // Feed key (of the first feed in the Party).
  required string feedKey = 4;

  // Signature.
  required string signature = 5;
}
